# msbuild-gen

./: KnownItems.hs  KnownProperties.hs  MSBuildGen.cabal  MSBuildGen.hs  Main.hs  Microsoft.Cpp.props
Examples/: KnownItems.hs  KnownProperties.hs  KnownTargets.hs  MicrosoftBuildStepsTargets.hs  MicrosoftCppDefaultProps.hs  MicrosoftCppInvalidPlatformTargets.hs  MicrosoftCppProps.hs
MSBuildGen/: Output.hs  Syntax.hs  Types.hs
MSBuildGen/DSL/: Core.hs  Items.hs  Properties.hs  Targets.hs
