name:                MSBuildGen
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Dmitry Polyanitsa
maintainer:          coffeecup.winner@gmail.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

executable MSBuildGen
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    DeriveFunctor
  build-depends:       base             >= 4.7  && < 4.8,
                       free             >= 4.10 && < 4.11,
                       xml              >= 1.3  && < 1.4,
                       template-haskell >= 2.9  && < 2.10
  -- hs-source-dirs:
  default-language:    Haskell2010
